build with proper name and icon

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-whatsapp",
-  "displayName": "Rescue wizardly newt",
+  "displayName": "Chrome Whatsapp",
   "version": "0.0.1",
   "description": "Lets you message to your friend in whatsapp easily ",
   "author": "Deepak Bhattarai",
